# Engine

./: .gitignore  CMakeLists.txt  README.md
dependencies/glm/glm/: CMakeLists.txt
dependencies/googletest/: CMakeLists.txt
dependencies/stb/: CMakeLists.txt
ecs/: TransformSystem.cpp  TransformSystem.hpp
src/: Constants.hpp  Engine.cpp  Engine.hpp  TextureManager.cpp  main.cpp
src/container/: ObjectPool.hpp
src/ecs/: ECS.h  ECS.hpp  Entity.cpp  Entity.hpp  EntityManager.cpp  EntityManager.hpp  RandomMovementSystem.cpp  RandomMovementSystem.hpp  SpriteSystem.cpp  SpriteSystem.hpp  TextComponent.cpp  TransformSystem.cpp  TransformSystem.hpp
src/math/: Vector3.h
src/memory/: Allocator.cpp  Allocator.h  Memory.cpp  SystemAllocator.cpp  SystemAllocator.h
src/scene/: Node.cpp  Node.hpp  Scene.cpp  Scene.hpp
tests/: CMakeLists.txt
tests/src/: main.cpp
tests/src/ecs/: System.h  TransformSystem.h
